--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "webpack serve --config webpack.dev.js"
   },
   "devDependencies": {
-    "webpack": "^5.100.2",
+    "css-loader": "^7.1.2",
+    "sass": "^1.90.0",
+    "sass-loader": "^16.0.5",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.101.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
   }
