--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "css-loader": "^7.1.2",
     "gh-pages": "^6.3.0",
+    "html-webpack-plugin": "^5.6.3",
     "sass": "^1.90.0",
     "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
